# R2-home-assignment

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
be-low-level/: Cargo.toml  Dockerfile
be-low-level/migrations/: 0001_init.sql
be-low-level/src/: auth.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  seeding.rs  state.rs
be-low-level/src/handlers/: login.rs  logout.rs  mod.rs  try_luck.rs
be-low-level/src/repository/: mod.rs  user.rs  wins.rs
be-low-level/tests/: integration_test.rs
