[package]
name = "be-low-level"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
